# rust_api

./: .gitignore  Cargo.toml  README.md  employe  employe.db  refinery.toml
migration/: V2__create_another_table.sql  V3__create_employee.sql
migrations/: V1__create_employee.sql  V3__create_employee.sql
src/: database.rs  main.rs
src/database/: connection.rs  insert.rs  mod.rs
src/env/: mod.rs
src/model/: employee.rs  mod.rs  people.rs
src/services/: employee.rs  mod.rs  public.rs
